:snake::zap: Fixed minor bugs on small screens

--- a/assets/css/media-queris.css
+++ b/assets/css/media-queris.css
@@ -16,24 +16,12 @@
   }
 }
 
-/* @media screen and (width <= 79em) {
-  9px => 9/16
-
-  .diet-attribute,
-  .feature-text {
-    font-size: 1.6rem;
-  }
-
-  .feature-title {
-    font-size: 2rem;
-  }
-} */
-
 /*******************************************/
 /* Below 1200px (Landscape tablet) */
 /*******************************************/
 /* Landscape tablets */
 @media screen and (width <= 75em) {
+  /* 9px 9/16 */
   html {
     font-size: 56.25%;
   }
@@ -197,12 +185,16 @@
 
 /*******************************************************/
 
-/* Below 704px (Smaller Tablets) */
-@media screen and (width <= 44em) {
+/* Below 744px (Smaller Tablets) */
+@media screen and (width <= 47em) {
   .grid--2-cols,
   .grid--3-cols,
   .grid--4-cols {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .pricing-container {
+    grid-template-columns: 1fr;
   }
 
   .diets {
@@ -233,7 +225,7 @@
 }
 
 /* Below 544px (Smaller Phones) */
-@media screen and (width <= 34em) {
+@media screen and (width <= 38em) {
   .grid {
     row-gap: 4.8rem;
   }
@@ -287,5 +279,30 @@
   .cta-img-box {
     grid-row: 1;
     height: 32rem;
+  }
+}
+
+/* For small smartphones */
+/* Below 432px width */
+@media screen and (width <= 27em) {
+  .section-pricing {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .heading-secondary {
+    font-size: 2.4rem;
+  }
+  .section-cta {
+    padding-bottom: 6.4rem;
+  }
+  .section-how {
+    padding-top: 4.8rem;
+  }
+}
+
+@media screen and (width <=24em) {
+  .btn-container {
+    flex-direction: column;
   }
 }
