--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,12 @@
   position: relative;
 }
 
+.navigation {
+  display: flex;
+  justify-content: end;
+  width: 100%;
+}
+
 /* Sticky header */
 
 .sticky .header {
